geonames: Use Double.valueOf